WebCore/rendering/RenderListBox.h
@@ -64,7 +64,9 @@ public:
     virtual short baselinePosition(bool firstLine, bool isRootLineBox) const;
     virtual void calcHeight();
 
-    void selectionChanged() { repaint(); }
+    virtual void layout();
+
+    void selectionChanged();
 
     void setOptionsChanged(bool changed) { m_optionsChanged = changed; }
 
@@ -100,8 +102,11 @@ private:
     void paintItemForeground(PaintInfo&, int tx, int ty, int listIndex);
     void paintItemBackground(PaintInfo&, int tx, int ty, int listIndex);
     bool listIndexIsVisible(int index);
+    void scrollToRevealSelection();
 
     bool m_optionsChanged;
+    bool m_scrollToRevealSelectionAfterLayout;
+    bool m_inAutoscroll;
     int m_optionsWidth;
     int m_indexOffset;
 
